# undangan-app

./: .gitignore  Cargo.toml  Makefile  dev.sh  tailwind.config.js  wrangler.toml
.devcontainer/: devcontainer.json
.idx/: dev.nix
assets/: tailwind.css
src/: api.rs  app.rs  lib.rs  main.rs  templates.rs  utils.rs
src/api/: d1.rs  mod.rs
src/components/: countdown.rs  greeting.rs  mod.rs  occasion.rs
static/: input.css  schema.sql  style.css  tailwind.css
templates/: base.html  countdown.html  greeting.html  head.html  index.html  occasion.html
templates/components/: countdown.html  greeting.html  occasion.html
