[package]
name = "undangan-app"
version = "0.1.0"
edition = "2021"
authors = [ "rafiyqw <rafiyqw@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
worker = { version="0.3.4", features=['http', 'axum'] }
worker-macros = { version="0.3.4", features=['http'] }
axum  = { version = "0.7", default-features = false }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.7" }