[package]
name = "undangan-app"
version = "0.1.0"
edition = "2021"
authors = [ "rafiyqw <rafiyqw@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
askama = { version = "0.12.1" }
chrono = "0.4.38"
console_error_panic_hook = { version = "0.1.7" }
serde = "1"
worker = { version="0.4.0", features=['http', 'd1'] }
worker-macros = { version="0.4.0", features=['http'] }